<resources>
    <string name="app_name">SEMUSP</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="title_activity_recuperar_senha">RecuperarSenha</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="todo">TODO</string>
    <string name="Todo2">TODO</string>
    <string name="Todo3">TODO</string>
    <string name="coment" />
    <string name="share" />
    <string name="like" />
</resources>